# gpu_conv

./: .gitignore  CMakeLists.txt  README.md
cuda/: convolution_global.cu  convolution_gpu.cu  convolution_kernel.cu  convolution_kernel.cuh  convolution_shared.cu  cuda_utils.cuh  gpu_convolution.cu  stream_pipeline.cu
include/: convolution_cpu.hpp  convolution_gpu.hpp  cpu_convolution.hpp  cuda_memory_manager.hpp  gpu_convolution.hpp  image.hpp  kernel.hpp
lib/Debug/: SDL3.exp  SDL3.lib  SDL3_image.exp  SDL3_image.lib  SDL3_test.lib  SDL_uclibc.lib  gconv.lib  image_viewer.lib
samples/: CMakeLists.txt
samples/include/: filter.hpp
samples/src/: cpu_vs_gpu_benchmark.cpp  filter.cpp  multi_stream_pipeline.cpp  test_filters.cpp  triple_buffer_pipeline.cpp
scripts/: build_linux.sh  build_windows.bat
src/: convolution_cpu.cpp  cpu_convolution.cpp  cuda_memory_manager.cpp  image.cpp  kernel.cpp  timer.cpp
utils/image_viewer/: CMakeLists.txt
utils/image_viewer/include/: image_viewer.hpp
utils/image_viewer/src/: image_viewer.cpp
